@@ -12,6 +12,8 @@ Version 0.9
 - Added the ``lineanchors`` option to the HTML formatter, thanks to
   Ian Charnas for the idea.
 
+- Give the line numbers table a CSS class in the HTML formatter.
+
 - Added 256-color terminal formatter.
 
 - Added ActionScript lexer.
